# sappy

./: .appveyor.yml  .project  .pycodestyle.ini  .pydevproject  .pylint.ini  .travis.yml  .verchew.ini  CHANGELOG.md  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  scent.py  setup.py
.github/workflows/: main.yml
docs/: cli.md  environment.md  index.md  requirements.txt
sappy/: __init__.py  __main__.py  cli.py  handlers.py  server.py  settings.py  test_settings.py
sappy/tests/: __init__.py  conftest.py  test_sappy.py  test_settings.py
tests/: __init__.py  conftest.py  test_all.py  test_cli.py
