[tool.poetry]

name = "sappy"
version = "1.1b1"
description = "Single-page application server for end-to-end testing."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/sappy"
documentation = "https://sappy.readthedocs.io"
repository = "https://github.com/jacebrowning/sappy"

keywords = [
    "testing",
    "command-line",
    "end-to-end-testing",
    "single-page-applications",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]

python = "^3.6"

click = "^7.0"
minilog = "^2.0"

[tool.poetry.dev-dependencies]

# Formatters
black = "=20.8b1"
isort = "=5.5.1"

# Linters
mypy = "~0.782"
pydocstyle = "*"
pylint = "~2.6.0"

# Testing
pytest = "^5.4.3"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "9014bf3ee564518aad3622b5f035f7ca6139e398" }
pytest-expecter = "^2.0"
pytest-mock = "^2.0"
pytest-vcr = "^1.0.2"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^4.1"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
rope = "^0.18"

[tool.poetry.scripts]

sappy = "sappy.cli:main"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
