[tool.poetry]

name = "sappy"
version = "1.2"
description = "Single-page application server for end-to-end testing."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/sappy"
documentation = "https://sappy.readthedocs.io"
repository = "https://github.com/jacebrowning/sappy"

keywords = ["testing", "end-to-end", "single-page-application", "web-servicer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]

python = "^3.8"

click = "^8.0"
minilog = "^2.0"

[tool.poetry.dev-dependencies]

# Formatters
black = "^23.7"
isort = "^5.12"

# Linters
mypy = "^1.0"
pydocstyle = "^6.1"
pylint = "~2.15"
wrapt = "*"            # missing 'pylint' dependency
types-setuptools = "*"
types-requests = "*"

# Testing
pytest = "^7.3"
pytest-cov = "^4.1"
pytest-describe = "^2.1"
pytest-expecter = "^3.0"
pytest-mock = "^2.0"
pytest-random = "*"
freezegun = "*"

coveragespace = "^6.0"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
rope = "^0.18"

[tool.poetry.scripts]

sappy = "sappy.cli:main"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

# Reports
cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
